--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
 <head>
   <meta charset="utf-8" />
@@ -8,9 +7,13 @@
     body{font-family:Arial,Helvetica,sans-serif;margin:20px;background:#f4f6fa;color:#0b1220}
     .card{max-width:700px;margin:auto;background:#fff;padding:20px;border-radius:12px;box-shadow:0 6px 20px rgba(0,0,0,0.08)}
     h1{text-align:center;font-size:22px;margin-bottom:12px}
-    input,button,select{padding:10px;border-radius:8px;border:1px solid #ddd;font-size:14px;margin:6px 0}
-    .output{background:#111827;color:#f9fafb;padding:12px;border-radius:8px;margin-top:10px;white-space:pre-wrap}
-    .muted{font-size:13px;color:#555}
+    input,select{padding:10px;border-radius:8px;border:1px solid #ddd;font-size:14px;margin:6px 0;width:100%}
+    .results{margin-top:16px}
+    .result-row{display:flex;justify-content:space-between;align-items:center;background:#111827;color:#f9fafb;padding:10px 12px;border-radius:8px;margin-bottom:8px}
+    .label{font-weight:bold}
+    button.copy-btn{background:#2563eb;color:#fff;border:none;padding:6px 10px;border-radius:6px;cursor:pointer;font-size:12px;transition:0.2s}
+    button.copy-btn:hover{background:#1e40af}
+    .error{color:#dc2626;font-weight:bold;margin-top:10px}
   </style>
 </head>
 <body>
@@ -28,17 +31,9 @@
       <option value="16">Hexadecimal (base 16)</option>
     </select>
 
-    <label>Convert to:</label>
-    <select id="toBase">
-      <option value="2">Binary (base 2)</option>
-      <option value="8">Octal (base 8)</option>
-      <option value="10">Decimal (base 10)</option>
-      <option value="16">Hexadecimal (base 16)</option>
-    </select>
+    <div id="errorMsg" class="error"></div>
 
-    <button id="convertBtn">Convert</button>
-
-    <div class="output" id="result">Result will appear here</div>
+    <div class="results" id="results"></div>
   </div>
 
 <script>
@@ -46,6 +41,7 @@ const DIGITS = "0123456789ABCDEF";
 
 function parseToDecimal(numStr, base){
   numStr=numStr.trim().toUpperCase();
+  if(numStr.length===0) throw new Error("Please enter a number");
   let value=0;
   for(let ch of numStr){
     let d = DIGITS.indexOf(ch);
@@ -54,6 +50,7 @@ function parseToDecimal(numStr, base){
   }
   return value;
 }
+
 function fromDecimal(value, base){
   if(value===0) return "0";
   let digits=[];
@@ -64,19 +61,42 @@ function fromDecimal(value, base){
   return digits.reverse().join('');
 }
 
-document.getElementById("convertBtn").onclick=()=>{
+function updateResults(){
   const input=document.getElementById("numInput").value;
   const fromBase=Number(document.getElementById("fromBase").value);
-  const toBase=Number(document.getElementById("toBase").value);
+  const resultsDiv=document.getElementById("results");
+  const errorDiv=document.getElementById("errorMsg");
+  resultsDiv.innerHTML="";
+  errorDiv.textContent="";
+
   try{
     const decimal=parseToDecimal(input,fromBase);
-    const result=fromDecimal(decimal,toBase);
-    document.getElementById("result").textContent =
-      `${input} (base ${fromBase}) = ${result} (base ${toBase})`;
+
+    const bases=[
+      {base:2,label:"Binary"},
+      {base:8,label:"Octal"},
+      {base:10,label:"Decimal"},
+      {base:16,label:"Hexadecimal"}
+    ];
+
+    bases.forEach(({base,label})=>{
+      const value=fromDecimal(decimal,base);
+      const row=document.createElement("div");
+      row.className="result-row";
+      row.innerHTML=`
+        <span class="label">${label} (base ${base}):</span>
+        <span>${value}</span>
+        <button class="copy-btn" onclick="navigator.clipboard.writeText('${value}')">Copy</button>
+      `;
+      resultsDiv.appendChild(row);
+    });
   }catch(e){
-    document.getElementById("result").textContent="Error: "+e.message;
+    errorDiv.textContent=e.message;
   }
-};
+}
+
+document.getElementById("numInput").addEventListener("input", updateResults);
+document.getElementById("fromBase").addEventListener("change", updateResults);
 </script>
 </body>
 </html>
