--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#6200ee">
+
   <title>Number System Converter</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
@@ -165,3 +168,4 @@ function convertNumber(){
 </script>
 </body>
 </html>
+
