--- a/index.html
+++ b/index.html
@@ -165,7 +165,12 @@ function convertNumber(){
     stepsDiv.textContent = e.message;
   }
 }
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("./service-worker.js")
+      .then(() => console.log("Service Worker registered"));
+  }
 </script>
 </body>
 </html>
+
 
